Day 08 v2.1 solution. Little "optimization" with new suggestions in new IntelliJ version.